--- a/EasyInvoiceWeb/Views/Businesses/Index.cshtml
+++ b/EasyInvoiceWeb/Views/Businesses/Index.cshtml
@@ -23,29 +23,34 @@
             </div>
             <form asp-controller="Businesses" asp-action="Create">
             <div class="modal-body">
-               
                     <div class="form-row" style="margin-bottom:15px;">
                         <div class="col">
-                            <input type="text" asp-for="@Model.CreateBusiness.Name" class="form-control" placeholder="Business Name">
+                            <label for="inputEmail4">Business Name</label>
+                            <input type="text" required asp-for="@Model.CreateBusiness.Name" class="form-control" placeholder="Business Name">
                         </div>
                         <div class="col">
-                            <input type="text" asp-for="@Model.CreateBusiness.Email" class="form-control" placeholder="Business Email">
+                            <label for="inputEmail4">Business Email</label>
+                            <input type="text" required asp-for="@Model.CreateBusiness.Email" class="form-control" placeholder="Business Email">
                         </div>
                     </div>
                     <div class="form-row" style="margin-bottom:15px;">
                         <div class="col">
-                            <input type="text" asp-for="@Model.CreateBusiness.ContactNumber" class="form-control" placeholder="Contact Phone">
+                            <label for="inputEmail4">Contact Phone</label>
+                            <input type="text" required asp-for="@Model.CreateBusiness.ContactNumber" class="form-control" placeholder="Contact Phone">
                         </div>
                         <div class="col">
-                            <input type="text" asp-for="@Model.CreateBusiness.Address" class="form-control" placeholder="Contact Address">
+                            <label for="inputEmail4">Contact Address</label>
+                            <input type="text" required asp-for="@Model.CreateBusiness.Address" class="form-control" placeholder="Contact Address">
                         </div>
                     </div>
                     <div class="form-row" style="margin-bottom:15px;">
                         <div class="col">
-                            <input type="text" class="form-control" asp-for="@Model.CreateBusiness.Bank" placeholder="Bank Name">
+                            <label for="inputEmail4">Bank Name</label>
+                            <input type="text" required class="form-control" asp-for="@Model.CreateBusiness.Bank" placeholder="Bank Name">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" asp-for="@Model.CreateBusiness.AccountNumber" placeholder="Account Number">
+                            <label for="inputEmail4">Account Number</label>
+                            <input type="text" required class="form-control" asp-for="@Model.CreateBusiness.AccountNumber" placeholder="Account Number">
                         </div>
                     </div>
                 
